--- a/package.json
+++ b/package.json
@@ -51,29 +51,29 @@
   "private": false,
   "devDependencies": {
     "@alex_neo/jest-expect-message": "1.0.5",
-    "@types/jest": "29.5.2",
+    "@types/jest": "29.5.3",
     "@types/jsdom": "21.1.1",
-    "@types/node": "20.3.3",
+    "@types/node": "20.4.8",
     "@types/sharp": "0.31.1",
-    "@typescript-eslint/eslint-plugin": "5.61.0",
-    "@typescript-eslint/parser": "5.61.0",
-    "bootstrap": "5.3.0",
+    "@typescript-eslint/eslint-plugin": "6.2.1",
+    "@typescript-eslint/parser": "6.2.1",
+    "bootstrap": "5.3.1",
     "chokidar-cli": "3.0.0",
     "copyfiles": "2.4.1",
     "dpdm": "3.13.1",
-    "eslint": "8.44.0",
+    "eslint": "8.46.0",
     "eslint-cli": "1.1.1",
-    "eslint-plugin-import": "2.27.5",
-    "eslint-plugin-markdown": "3.0.0",
+    "eslint-plugin-import": "2.28.0",
+    "eslint-plugin-markdown": "3.0.1",
     "html-loader": "4.2.0",
     "husky": "8.0.3",
-    "jest": "29.6.0",
-    "jest-environment-jsdom": "29.6.0",
+    "jest": "29.6.2",
+    "jest-environment-jsdom": "29.6.2",
     "markdownlint-cli": "0.35.0",
-    "release-it": "15.11.0",
-    "rollup": "3.26.1",
+    "release-it": "16.1.3",
+    "rollup": "3.27.2",
     "rollup-plugin-commonjs": "10.1.0",
-    "rollup-plugin-dts": "5.3.0",
+    "rollup-plugin-dts": "5.3.1",
     "rollup-plugin-html": "0.2.1",
     "rollup-plugin-json": "4.0.0",
     "rollup-plugin-minification": "0.2.0",
@@ -86,6 +86,9 @@
     "typescript": "5.1.6",
     "typescript-eslint": "0.0.1-alpha.0",
     "webpack-bundle-analyzer": "4.9.0"
+  },
+  "dependencies": {
+    "@ungap/global-this": "0.4.4"
   },
   "keywords": [
     "javascript",
