--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "scripts:dev": "rollup --config ./rollup.config.mjs --environment INCLUDE_DEPS,BUILD:development",
     "scripts:prod": "rollup --config ./rollup.config.mjs  --environment INCLUDE_DEPS,BUILD:production",
     "scripts:lint": "eslint ./src --ext .js,.ts",
-    "lint": "npm run markdown:lint && npm run scripts:lint && dpdm --transform=true --tree=false --warning=false ./app/app.ts && npm run test",
+    "lint": "npm run markdown:lint && npm run scripts:lint && dpdm --transform=true --tree=false --warning=false ./src/optimize-image-on-the-client-side.ts && npm run test",
     "markdown:lint": "markdownlint \"**/*.md\" --config=.markdownlint.json --ignore-path=.markdownlintignore",
     "test": "./node_modules/.bin/jest --config jest.config.js .",
     "test:debug": "node --inspect ./node_modules/.bin/jest --runInBand --config jest.config.js .",
@@ -53,10 +53,10 @@
     "@alex_neo/jest-expect-message": "1.0.5",
     "@types/jest": "29.5.11",
     "@types/jsdom": "21.1.6",
-    "@types/node": "20.10.5",
+    "@types/node": "20.11.8",
     "@types/sharp": "0.31.1",
-    "@typescript-eslint/eslint-plugin": "6.16.0",
-    "@typescript-eslint/parser": "6.16.0",
+    "@typescript-eslint/eslint-plugin": "6.19.1",
+    "@typescript-eslint/parser": "6.19.1",
     "bootstrap": "5.3.2",
     "chokidar-cli": "3.0.0",
     "copyfiles": "2.4.1",
@@ -65,13 +65,13 @@
     "eslint-cli": "1.1.1",
     "eslint-plugin-import": "2.29.1",
     "eslint-plugin-markdown": "3.0.1",
-    "html-loader": "4.2.0",
-    "husky": "8.0.3",
+    "html-loader": "5.0.0",
+    "husky": "9.0.6",
     "jest": "29.7.0",
     "jest-environment-jsdom": "29.7.0",
     "markdownlint-cli": "0.38.0",
-    "release-it": "17.0.1",
-    "rollup": "4.9.1",
+    "release-it": "17.0.3",
+    "rollup": "4.9.6",
     "rollup-plugin-commonjs": "10.1.0",
     "rollup-plugin-dts": "6.1.0",
     "rollup-plugin-html": "0.2.1",
