--- a/package.json
+++ b/package.json
@@ -53,25 +53,25 @@
     "@alex_neo/jest-expect-message": "1.0.5",
     "@types/jest": "29.5.12",
     "@types/jsdom": "21.1.6",
-    "@types/node": "20.11.16",
+    "@types/node": "20.12.5",
     "@types/sharp": "0.31.1",
-    "@typescript-eslint/eslint-plugin": "6.20.0",
-    "@typescript-eslint/parser": "6.20.0",
-    "bootstrap": "5.3.2",
+    "@typescript-eslint/eslint-plugin": "7.5.0",
+    "@typescript-eslint/parser": "7.5.0",
+    "bootstrap": "5.3.3",
     "chokidar-cli": "3.0.0",
     "copyfiles": "2.4.1",
     "dpdm": "3.14.0",
     "eslint": "8.56.0",
     "eslint-cli": "1.1.1",
     "eslint-plugin-import": "2.29.1",
-    "eslint-plugin-markdown": "3.0.1",
+    "eslint-plugin-markdown": "4.0.1",
     "html-loader": "5.0.0",
-    "husky": "9.0.10",
+    "husky": "9.0.11",
     "jest": "29.7.0",
     "jest-environment-jsdom": "29.7.0",
     "markdownlint-cli": "0.39.0",
-    "release-it": "17.0.3",
-    "rollup": "4.9.6",
+    "release-it": "17.1.1",
+    "rollup": "4.14.0",
     "rollup-plugin-commonjs": "10.1.0",
     "rollup-plugin-dts": "6.1.0",
     "rollup-plugin-html": "0.2.1",
@@ -83,8 +83,8 @@
     "shelljs-nodecli": "0.1.1",
     "shx": "0.3.4",
     "standard-version": "9.5.0",
-    "typescript": "5.3.3",
-    "typescript-eslint": "0.0.1-alpha.0",
+    "typescript": "5.4.4",
+    "typescript-eslint": "7.5.0",
     "webpack-bundle-analyzer": "4.10.1"
   },
   "dependencies": {
